--- a/README.html
+++ b/README.html
@@ -352,8 +352,7 @@ display: none;
 </div>
 
 
-<div id="census-history-project" class="section level2">
-<h2>CENSUS HISTORY PROJECT</h2>
+<p>CENSUS HISTORY PROJECT</p>
 <p>Various analyses and reports that take on an historical approach to
 population-level data analysis and database development.</p>
 <p><strong>Ancillary files</strong>:</p>
@@ -379,14 +378,14 @@ file)</p>
 </ul>
 <div id="project-pis" class="section level4">
 <h4>Project PIs</h4>
-<p>Nathan Alexander (Howard University) &amp; Hye Ryeon Jang (Morehouse
-College)</p>
+<p>Nathan Alexander (Howard University), Hye Ryeon Jang (Morehouse
+College), &amp; Christopher Agbonkhese (Bates College)</p>
 </div>
 <div id="contributors" class="section level4">
 <h4>Contributors</h4>
-<p>Myles Ndiritu (Morehouse College), Zoe Williams (Howard
-University)</p>
-</div>
+<p>Myles Ndiritu (Morehouse College), Zoe Williams (Howard University),
+Jibek Gupta (Howard University), Maxwell Messiah (Dalton), Bayowa
+Onabajo (Howard University)</p>
 </div>
 
 
