--- a/README.html
+++ b/README.html
@@ -352,9 +352,11 @@ display: none;
 </div>
 
 
-<p>CENSUS HISTORY PROJECT</p>
-<p>Various analyses and reports that take on an historical approach to
-population-level data analysis and database development.</p>
+<p>THE CENSUS HISTORY PROJECT</p>
+<p>The Census History Project focuses on the extraction, analysis, and
+reporting of U.S. census data. Our project team uses an historical
+approach to considering the quantification of population-level data and
+in the development of databases.</p>
 <p><strong>Ancillary files</strong>:</p>
 <ul>
 <li><p><code>api.R</code> helps new users generate and store a <a href="https://api.census.gov/data/key_signup.html">US Census API
@@ -376,6 +378,11 @@ file)</p>
 </ul></li>
 </ul></li>
 </ul>
+<div id="group-info" class="section level4">
+<h4>Group Info</h4>
+<p>group: census-users</p>
+<p>initiated: fall 2022</p>
+</div>
 <div id="project-pis" class="section level4">
 <h4>Project PIs</h4>
 <p>Nathan Alexander (Howard University), Hye Ryeon Jang (Morehouse
@@ -386,6 +393,10 @@ College), &amp; Christopher Agbonkhese (Bates College)</p>
 <p>Myles Ndiritu (Morehouse College), Zoe Williams (Howard University),
 Jibek Gupta (Howard University), Maxwell Messiah (Dalton), Bayowa
 Onabajo (Howard University)</p>
+</div>
+<div id="funding" class="section level4">
+<h4>Funding</h4>
+<p>Funding for this project is provided by <a href="https://data.org">Data.org</a> and the <a href="https://sloan.org">Alfred P. Sloan Foundation</a>.</p>
 </div>
 
 
