--- a/README.html
+++ b/README.html
@@ -353,10 +353,10 @@ display: none;
 
 
 <p>THE CENSUS HISTORY PROJECT</p>
-<p>The Census History Project focuses on the extraction, analysis, and
-reporting of U.S. census data. Our project team uses an historical
-approach to considering the quantification of population-level data and
-in the development of databases.</p>
+<p>The Census History Project focuses on the exploration, extraction,
+analysis of U.S. Census data. Our users group takes an historical
+approach to considering the quantification of population-level data, the
+methods and measures used to explore and extract and analyze data.</p>
 <p><strong>Ancillary files</strong>:</p>
 <ul>
 <li><p><code>api.R</code> helps new users generate and store a <a href="https://api.census.gov/data/key_signup.html" target="_blank">US
