--- a/README.html
+++ b/README.html
@@ -359,8 +359,8 @@ approach to considering the quantification of population-level data, the
 methods and measures used to explore and extract and analyze data.</p>
 <p><strong>Ancillary files</strong>:</p>
 <ul>
-<li><p><code>api.R</code> helps new users generate and store a <a href="https://api.census.gov/data/key_signup.html" target="_blank">US
-Census API key</a>.</p>
+<li><p><code>api.R</code> helps new users generate and store a <a href="https://api.census.gov/data/key_signup.html">US Census API
+key</a>.</p>
 <ul>
 <li><p>You should never share your Census API key. Follow the steps
 below:</p>
@@ -396,7 +396,7 @@ Onabajo (Howard University)</p>
 </div>
 <div id="funding" class="section level4">
 <h4>Funding</h4>
-<p>Funding for this project is provided by <a href="https://data.org" target="_blank">Data.org</a> and the <a href="https://sloan.org" target="_blank">Alfred P. Sloan Foundation</a>.</p>
+<p>Funding for this project is provided by <a href="https://data.org">Data.org</a> and the <a href="https://sloan.org">Alfred P. Sloan Foundation</a>.</p>
 </div>
 
 
