--- a/README.html
+++ b/README.html
@@ -352,11 +352,12 @@ display: none;
 </div>
 
 
-<p>THE CENSUS HISTORY PROJECT</p>
-<p>The Census History Project focuses on the exploration, extraction,
-analysis of U.S. Census data. Our users group takes an historical
-approach to considering the quantification of population-level data, the
-methods and measures used to explore and extract and analyze data.</p>
+<p>The <strong>CENSUS HISTORY PROJECT</strong> focuses on the
+exploration, extraction, and analysis of U.S. Census data for further
+research purposes. Our users group takes on a critical historical
+approach to understanding population-level data on the United States,
+the methods used to gather the data, and the measures applied to
+explore, extract, and analyze the data.</p>
 <p><strong>Ancillary files</strong>:</p>
 <ul>
 <li><p><code>api.R</code> helps new users generate and store a <a href="https://api.census.gov/data/key_signup.html">US Census API
@@ -385,14 +386,22 @@ file)</p>
 </div>
 <div id="project-pis" class="section level4">
 <h4>Project PIs</h4>
-<p>Nathan Alexander (Howard University), Hye Ryeon Jang (Morehouse
-College), &amp; Christopher Agbonkhese (Bates College)</p>
+<ul>
+<li>Nathan Alexander (Howard University)</li>
+<li>Hye Ryeon Jang (Morehouse College)</li>
+<li>Christopher Agbonkhese (Bates College)</li>
+</ul>
 </div>
 <div id="contributors" class="section level4">
 <h4>Contributors</h4>
-<p>Myles Ndiritu (Morehouse College), Zoe Williams (Howard University),
-Jibek Gupta (Howard University), Maxwell Messiah (Dalton), Bayowa
-Onabajo (Howard University)</p>
+<ul>
+<li>Sayid Achilov (Brown University)</li>
+<li>Myles Ndiritu (Morehouse College)</li>
+<li>Jibek Gupta (Howard University)</li>
+<li>Zoe Williams (Howard University)</li>
+<li>Maxwell Messiah (Dalton)</li>
+<li>Bayowa Onabajo (Howard University)</li>
+</ul>
 </div>
 <div id="funding" class="section level4">
 <h4>Funding</h4>
