--- a/README.html
+++ b/README.html
@@ -358,27 +358,6 @@ research purposes. Our users group takes on a critical historical
 approach to understanding population-level data on the United States,
 the methods used to gather the data, and the measures applied to
 explore, extract, and analyze the data.</p>
-<p><strong>Ancillary files</strong>:</p>
-<ul>
-<li><p><code>api.R</code> helps new users generate and store a <a href="https://api.census.gov/data/key_signup.html">US Census API
-key</a>.</p>
-<ul>
-<li><p>You should never share your Census API key. Follow the steps
-below:</p>
-<ul>
-<li><p>Set up an environment variable to hold your api key with
-<code>usethis::edit_r_environ()</code></p></li>
-<li><p>Transfer information into <code>.Renviron</code> (pop-up
-file)</p>
-<ul>
-<li>Insert <code>CENSUS_API_KEY=&#39;your_api_key&#39;</code> into the
-<code>.Renviron</code> file</li>
-</ul></li>
-<li><p>Insert your census API key via
-<code>Sys.getenv(&quot;CENSUS_API_KEY&quot;)</code></p></li>
-</ul></li>
-</ul></li>
-</ul>
 <div id="group-info" class="section level4">
 <h4>Group Info</h4>
 <p>group: census-users</p>
@@ -406,6 +385,28 @@ file)</p>
 <div id="funding" class="section level4">
 <h4>Funding</h4>
 <p>Funding for this project is provided by <a href="https://data.org">Data.org</a> and the <a href="https://sloan.org">Alfred P. Sloan Foundation</a>.</p>
+<p><strong>Ancillary files</strong>:</p>
+<ul>
+<li><p><a href="code/api.R"><code>api.R</code></a> helps new users
+generate and store a <a href="https://api.census.gov/data/key_signup.html">US Census API
+key</a>.</p>
+<ul>
+<li><p>You should never share your Census API key. Follow the steps
+below:</p>
+<ul>
+<li><p>Set up an environment variable to hold your api key with
+<code>usethis::edit_r_environ()</code></p></li>
+<li><p>Transfer information into <code>.Renviron</code> (pop-up
+file)</p>
+<ul>
+<li>Insert <code>CENSUS_API_KEY=&#39;your_api_key&#39;</code> into the
+<code>.Renviron</code> file</li>
+</ul></li>
+<li><p>Insert your census API key via
+<code>Sys.getenv(&quot;CENSUS_API_KEY&quot;)</code></p></li>
+</ul></li>
+</ul></li>
+</ul>
 </div>
 
 
