--- a/README.html
+++ b/README.html
@@ -387,8 +387,8 @@ explore, extract, and analyze the data.</p>
 <p>Funding for this project is provided by <a href="https://data.org">Data.org</a> and the <a href="https://sloan.org">Alfred P. Sloan Foundation</a>.</p>
 <p><strong>Ancillary files</strong>:</p>
 <ul>
-<li><p><a href="code/api.R"><code>api.R</code></a> helps new users
-generate and store a <a href="https://api.census.gov/data/key_signup.html">US Census API
+<li><p><a href="https://github.com/quant-shop/census/blob/main/code/api.R"><code>api.R</code></a>
+helps new users generate and store a <a href="https://api.census.gov/data/key_signup.html">US Census API
 key</a>.</p>
 <ul>
 <li><p>You should never share your Census API key. Follow the steps
